[STYLE] responsive studensheet. It is now possible to see the student sheet on the phone in a correct way (it is not perfect, but passing from the vertical position to the horizontal can solve it). The cross to escape is easier to access. The buttons (cross, next & previous) are blue, for a better visibility on a sheet that is often white

--- a/src/main/webapp/app/scanexam/statsexam/statsexam.component.scss
+++ b/src/main/webapp/app/scanexam/statsexam/statsexam.component.scss
@@ -186,3 +186,30 @@ a.disabled {
   cursor: not-allowed;
   //  text-decoration: underline;
 }
+
+:host ::ng-deep p-galleria .p-ripple {
+  color: #2196f3;
+}
+:host ::ng-deep .p-galleria-close {
+  z-index: 1;
+}
+
+.image-container {
+  height: 90vh;
+  overflow: auto;
+  display: flex;
+}
+.image-container img {
+  width: 100%;
+}
+
+@media (max-height: 500px) {
+  .image-container {
+    flex-direction: column;
+  }
+}
+@media (min-height: 500px) {
+  .image-container {
+    flex-direction: row;
+  }
+}
